--- a/test.html
+++ b/test.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>Intelligent Control Laboratory Ⅰ</title>
+    <img src="dinosaur.jpg">
   </head>
   <body>
     <p>This is my page</p>
