--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Intelligent Control Laboratory Ⅰ</title>
-    <img src="dinosaur.jpg">
+    <img src="leu_lab.jpg">
   </head>
   <body>
     <p>This is my page</p>
